# kan-weak-lensing

./: .gitignore  README.md  main.py  pyproject.toml
configs/: config.yaml
configs/dataset/: weak_lensing.yaml
configs/ensemble/: efficientkan.yaml  fasterkan.yaml  fastkan.yaml  kat.yaml  kkan.yaml  wavkan.yaml
configs/member/: efficientkan.yaml  fasterkan.yaml  fastkan.yaml  kat.yaml  kkan.yaml  wavkan.yaml
configs/model/: efficientkan.yaml  ensemble.yaml  fasterkan.yaml  fastkan.yaml  kat.yaml  kkan.yaml  wavkan.yaml
configs/objective/: ensemble.yaml  mse.yaml  score.yaml
configs/optimizer/: adam.yaml  adamw.yaml  lbfgs.yaml  sgd.yaml
configs/sweep/: _reduction_sweep.yaml  tune_base.yaml  tune_efficientkan_stage1.yaml  tune_fasterkan_stage1.yaml  (+16 more)
notebooks/: 01_explore_weak_lensing_data.ipynb
scripts/: _tune_common.sh  check_test_labels.sh  debug_kkan_convstem.py  debug_kkan_convstem.submit  dump_example_maps.py  dump_example_maps.submit  mlflow_server.sh  mlflow_server.submit  run_ensemble.submit  run_ensemble_all.sh  run_kat_stage2_all.sh  run_kkan_stage2_all.sh  run_local.sh  smoke_test_all.sh  smoke_test_all.submit  smoke_test_scattering.submit  submit_all.sh  submit_all_wl.sh  test_best_efficientkan.submit  test_kat_convstem.submit  test_kkan_convstem.submit  tune_efficientkan.submit  tune_efficientkan_wl.submit  tune_ensemble.submit  tune_ensemble_wl.submit  tune_fasterkan.submit  tune_fasterkan_wl.submit  tune_fastkan.submit  tune_fastkan_wl.submit  tune_kat.submit  tune_kkan.submit  tune_wavkan.submit  tune_wavkan_wl.submit
src/: dataset.py
(+77 files in other folders)
